Fixed github text not showing on light mode

--- a/src/app/components/bfc/bfc.component.scss
+++ b/src/app/components/bfc/bfc.component.scss
@@ -40,6 +40,10 @@ a {
 }
 .github {
     background-color: #000;
+    a {
+        color: #FFF;
+        font-family: var(--ff-secondary);
+    }
 }
 .personal {
     background-color: var(--container-color);
