--- a/src/app/components/blanche/blanche.component.scss
+++ b/src/app/components/blanche/blanche.component.scss
@@ -39,6 +39,10 @@ a {
 }
 .github {
     background-color: #000;
+    a {
+        color: #FFF;
+        font-family: var(--ff-secondary);
+    }
 }
 .personal {
     background-color: var(--container-color);
